womtool/src/test/resources/validate/biscayne/invalid/bad_task/bad_task.wdl
version development-1.1

workflow oops {
  call oopsie
}

task oopsie {
  input {
    String str
  }
  command { echo ${str} }
  runtime { docker: docker_image }
}
